k8s-repo/tools/service-mesh/istio-webhook/webhook-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-sync-webhook
  namespace: istio-system
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: istio-sync-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-sync-webhook
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-sync-webhook
  template:
    metadata:
      labels:
        app: istio-sync-webhook
    spec:
      containers:
      - name: webhook
        image: thanhtha/istio-sync-webhook:v11
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: istio-sync-webhook-certs
