k8s-repo/tools/service-mesh/istio-webhook/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-resource-sync-webhook
webhooks:
- name: sync.istio.resources
  clientConfig:
    service:
      name: istio-sync-webhook
      namespace: istio-system
      path: /mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lVT3JxK0NPY0ZzdzNtUllCSUlOMElad3ZDZ3h3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lERWVNQndHQTFVRUF3d1ZhWE4wYVc4dGMzbHVZeTEzWldKb2IyOXJMV05oTUI0WERUSTFNRGN6TVRFeApOVEl5TlZvWERUSTJNRGN6TVRFeE5USXlOVm93SURFZU1Cd0dBMVVFQXd3VmFYTjBhVzh0YzNsdVl5MTNaV0pvCmIyOXJMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUE3c2J0ZVMyQjd6dHEKWllEdTJvTGcyei8ybkdPRWFabnVqWGVVRlNBWTMybVZCRDYrczZQWkVmSndwZS9CUVlVa3h2bHZ6OUFuemR0bQpNSzZpdlMybUZ3Rm [...]
  rules:
  - operations: ["CREATE", "DELETE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["namespaces"]
  - operations: ["CREATE", "DELETE"]
    apiGroups: ["extensions.istio.io"]
    apiVersions: ["v1alpha1"]
    resources: ["wasmplugins"]
  - operations: ["CREATE", "DELETE"]
    apiGroups: ["networking.istio.io"]
    apiVersions: ["v1", "v1alpha3", "v1beta1"]
    resources: ["destinationrules", "envoyfilters", "gateways", "proxyconfigs", "serviceentries", "sidecars", "virtualservices", "workloadentries", "workloadgroups"]
  - operations: ["CREATE", "DELETE"]
    apiGroups: ["security.istio.io"]
    apiVersions: ["v1"]
    resources: ["authorizationpolicies", "peerauthentications", "requestauthentications"]
  - operations: ["CREATE", "DELETE"]
    apiGroups: ["telemetry.istio.io"]
    apiVersions: ["v1"]
    resources: ["telemetries"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
